# linux_build_system

./: CMakeLists.txt  build.config  ipc_server  linux_build_system
docker/: Dockerfile
include/: build_system.hpp  example.hpp  logger.hpp
include/ipc/: socket_client.hpp  socket_server.hpp
src/: main.cpp  my_program
src/ipc/: ipc_server.cpp  socket_client.cpp  socket_server.cpp
src/modules/: build_system.cpp  example.cpp  logger.cpp
tests/: build_tests.cpp
